force-app/main/default/objects/Contact/fields/RH_Company__c.field-meta.xml
<CustomField>
    <fullName>RH_Company__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>