force-app/main/default/objects/Contact/fields/RH_Create_User__c.field-meta.xml
<CustomField>
    <fullName>RH_Create_User__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create RH User</label>
    <type>Checkbox</type>
</CustomField>