force-app/main/default/objects/Contact/fields/RH_Extra_Infos__c.field-meta.xml
<CustomField>
    <fullName>RH_Extra_Infos__c</fullName>
    <defaultValue>&apos;[]&apos;</defaultValue>
    <description>&apos;[
    {
        &quot;label&quot;: &quot;website&quot;,
        &quot;value&quot;: &quot;www.mywebsite.com&quot;,
        &quot;name&quot;: &quot;website&quot;
    }
]&apos;</description>
    <inlineHelpText>Enter informations inthis way 
&apos;[
    {
        &quot;label&quot;: &quot;website&quot;,
        &quot;value&quot;: &quot;www.mywebsite.com&quot;,
        &quot;name&quot;: &quot;website&quot;
    }</inlineHelpText>
    <label>Extra Informations</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>