force-app/main/default/objects/Contact/fields/RH_Number_Groups_Leaded__c.field-meta.xml
<CustomField>
    <fullName>RH_Number_Groups_Leaded__c</fullName>
    <label>Number of Groups Leaded</label>
    <summaryFilterItems>
        <field>RH_WorkGroup__c.RH_Status__c</field>
        <operation>equals</operation>
        <value>Activated</value>
    </summaryFilterItems>
    <summaryForeignKey>RH_WorkGroup__c.RH_Team_Leader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>