force-app/main/default/objects/Contact/fields/RH_Role__c.field-meta.xml
<CustomField>
    <fullName>RH_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Base User</fullName>
            </value>
            <value>
                <fullName>Ressource Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>