force-app/main/default/objects/Contact/fields/RH_Skill_Infos__c.field-meta.xml
<CustomField>
    <fullName>RH_Skill_Infos__c</fullName>
    <defaultValue>&apos;[]&apos;</defaultValue>
    <description>&apos;[
        &quot;skill_id_1&quot;, &quot;skill_id_2&quot;
]&apos;</description>
    <inlineHelpText>Enter informations in this way 
&apos;[
&quot;skill_id_1&quot;, &quot;skill_id_2&quot;
]&apos;</inlineHelpText>
    <label>Skills Informations</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>