force-app/main/default/objects/Contact/fields/RH_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>RH_Started_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>day from which he started work</description>
    <label>Started Date</label>
    <type>Date</type>
</CustomField>