force-app/main/default/objects/Contact/fields/RH_tgUserId__c.field-meta.xml
<CustomField>
    <fullName>RH_tgUserId__c</fullName>
    <label>TG Chat ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>