force-app/main/default/objects/Contact/fields/RH_User__c.field-meta.xml
<CustomField>
    <fullName>RH_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RH User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User Most be have the profile Custom Identity User</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Custom Identity User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>RH_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>