force-app/main/default/objects/Contact/fields/RH_WorkGroup__c.field-meta.xml
<CustomField>
    <fullName>RH_WorkGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Group</label>
    <referenceTo>RH_WorkGroup__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>RH_GroupMembers</relationshipName>
    <type>Lookup</type>
</CustomField>