force-app/main/default/objects/Contact/fields/tg_username__c.field-meta.xml
<CustomField>
    <fullName>tg_username__c</fullName>
    <label>tg_username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>