force-app/main/default/objects/Contact/recordTypes/RH_USER.recordType-meta.xml
<RecordType>
    <fullName>RH_USER</fullName>
    <active>true</active>
    <label>RH USER</label>
</RecordType>